--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="like_app">Нравится приложение Банки.ру?</string>
     <string name="tap_bar">Нажмите на звездочку, что бы оценить его в Google Play</string>
     <string name="send">Отправить</string>
+    <string name="later">Позже</string>
     <string name="main">Главная</string>
     <string name="catalog">Каталог</string>
     <string name="insurance">Страхование</string>
